manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sodo-meetup
  labels:
    app: sodo-meetup
    backstage.io/kubernetes-id: sodo-meetup
spec:
  selector:
    matchLabels:
      app: sodo-meetup
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: sodo-meetup
        backstage.io/kubernetes-id: sodo-meetup
    spec:
      containers:
        - name: sodo-meetup
          image: image-registry.openshift-image-registry.svc:5000/demo/sodo-meetup:1.0
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 1024Mi
